# learning_langgraph

./: .gitignore  01_basic_graph.ipynb  02_graph_with_condition.ipynb  03_chatbot.ipynb  06_chatbot_agent_with_tools_memory.ipynb  07_chatbot_agent_with_tools_memory_langsmith.ipynb  LICENSE  README.md  markdown.css  pyproject.toml
code_basics/: 01_basic_graph.ipynb  01b_basic_graph.ipynb  02_graph_with_condition.ipynb  03_chatbot.ipynb  04_chatbot_with_tools.ipynb  05_chatbot_agent_with_tools.ipynb  06_chatbot_agent_with_tools_memory.ipynb  07_chatbot_agent_with_tools_memory_langsmith.ipynb  08_human_in_loop.py
effective_agents_workflows/: 01-Augmented-LLM.ipynb  02-Prompt-Chaining.ipynb  03-Parallelization.ipynb  03-Routing.ipynb  04-Parallelization.ipynb  05-Orchestrator-Worker.ipynb  05-Orchestrator.ipynb  06-Evaluator-Optimizer.ipynb  07-building-agents.ipynb  Readme.md
langgraph_fcc/: 01_simple_graph.ipynb  02_graph_with_multiple_inputs.ipynb  02_multiple_input_states.ipynb  03_sequential_graph.ipynb  04_conditionall_graph.ipynb  05_looping_graph.ipynb  readme.md
