[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.55.0",
    "black>=25.1.0",
    "faiss-cpu>=1.11.0",
    "google-generativeai>=0.8.5",
    "ipython>=9.3.0",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.16",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "notebook>=7.4.3",
    "openai>=1.93.0",
    "psycopg2>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "streamlit>=1.46.1",
    "yfinance>=0.2.64",
]
